--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+
 body {
     font-family: Helvetica, sans-serif;
     background-color: #f0f0f0;
@@ -362,7 +364,7 @@ footer {
 
 .banner-image {
     width: 100%;
-    height: 700px;
+    height: auto;
     display: block;
 }
 
