--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-body {
-    font-family: Arial;
+body{
+    font-family: 'Inter', sans-serif;
     background-color: #f0f0f0;
     margin: 0;
     padding: 0;
@@ -120,7 +120,7 @@ header .nav-button:hover {
     color: white;
     font-size: 18px;
     font-weight: 525px;
-    font-family: Helvetica, sans-serif;
+    font-family: 'Inter', sans-serif;
     z-index: 3;
     position: relative;
     white-space: nowrap;
@@ -137,7 +137,7 @@ header .nav-button:hover {
     margin-top: auto;
     cursor: pointer;
     font-size: 0.8em;
-    font-family: Helvetica, sans-serif;
+    font-family: 'Inter', sans-serif;
 }
 
 .movie-card button:hover {
@@ -169,7 +169,7 @@ footer {
     background-color: #ffffff;
     border-radius: 10px;
     padding: 20px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 -0 20px rgba(0, 0, 0, 0.5);
     width: 80%;
     max-width: 800px;
     position: relative;
@@ -187,7 +187,7 @@ footer {
 .overlay-header h2 {
     margin: 0;
     flex-grow: 1;
-    font-family: Helvetica, sans-serif;
+    font-family: 'Inter', sans-serif;
 }
 
 .close-button {
@@ -210,7 +210,7 @@ footer {
 #toggle-episodes,
 .blue-button,
 #media-type-selection button {
-    font-family: Helvetica, sans-serif;
+    font-family: 'Inter', sans-serif;
 }
 
 .episode-selector select {
