--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ header {
     border-bottom: 1px solid #ddd;
 }
 
+h1 img {
+  height: 1em;
+  vertical-align: middle;
+}
+
 header h1 {
     font-size: 24px;
     color: #000000;
