--- a/style.css
+++ b/style.css
@@ -14,10 +14,10 @@ header {
     align-items: center;
     border-bottom: 1px solid #ddd;
 }
-
-h1 img {
+header h1 img {
   height: 1em;
-  vertical-align: middle;
+  max-height: 100%;
+  display: block;
 }
 
 header h1 {
